--- a/nicnbk-ui-angular2/src/app/monitoring/view/monitoring-portfolio.component2.html
+++ b/nicnbk-ui-angular2/src/app/monitoring/view/monitoring-portfolio.component2.html
@@ -37,17 +37,16 @@
                 <option *ngFor="let item of getAllDates()" [value]="item">{{item}}</option>
             </select>
         </div>
-        <div class="col-md-3" *ngIf="canEdit()">
-            <label class="btn btn-primary" (click)="fileDownload()">
-                Download the latest uploaded file
-            </label>
+        <div class="pull-right" *ngIf="canEdit()">
+            <span class="glyphicon glyphicon-download-alt btn btn-sm" (click)="fileDownload()" title="Download the latest uploaded file"></span>
+            <!--<a (click)="fileDownload()" title="We will not spam you.">Privacy Policy</a>-->
         </div>
         <div class="pull-right" *ngIf="canEdit()">
             <form #yourForm="ngForm" (ngSubmit)="onSubmitNicPortfolio()">
-                <label class="btn btn-primary">
+                <label class="btn btn-sm btn-primary">
                     <input type="file" #fileupload id="fileupload" (change)="fileChange(fileupload.files)" style="display: none"/>Update
                 </label>
-                <button type="submit" class="btn btn-success" *ngIf="this.myFiles.length > 0">Submit</button>
+                <button type="submit" class="btn btn-sm btn-success" *ngIf="this.myFiles.length > 0">Submit</button>
             </form>
             <div *ngFor="let file of this.myFiles" class="label label-info">
                 <span>{{file.name}}</span>
