Files download in zip started

--- a/nicnbk-ui-angular2/src/app/monitoring/view/monitoring-liquid-portfolio.component.html
+++ b/nicnbk-ui-angular2/src/app/monitoring/view/monitoring-liquid-portfolio.component.html
@@ -37,7 +37,7 @@
             </select>
         </div>
         <div class="pull-right" *ngIf="canEdit()">
-            <span class="glyphicon glyphicon-download-alt btn btn-sm" (click)="fileDownload()" title="Download the latest(???) uploaded file"></span>
+            <span class="glyphicon glyphicon-download-alt btn btn-sm" (click)="fileDownload()" title="Download the latest uploaded file(s)"></span>
             <!--<a (click)="fileDownload()" title="We will not spam you.">Privacy Policy</a>-->
         </div>
         <div class="pull-right" *ngIf="canEdit()">
