--- a/nicnbk-ui-angular2/src/app/hf/view/hf.screening.filters.edit.component.html
+++ b/nicnbk-ui-angular2/src/app/hf/view/hf.screening.filters.edit.component.html
@@ -48,7 +48,7 @@
                             (keyup)="onNumberChangeManagerAUM()"/></td>
                         </tr>
                         <tr>
-                            <td>Start</td>
+                            <td>Lookback date from</td>
                             <td>
                                 <div class='input-group date col-md-2' id='startDateTPickeer' style="width: 100%">
                                     <input type='text' class="form-control" id="startDate" name="startDate" [(ngModel)]="filteredResult.startDateMonth"/>
