--- a/nicnbk-ui-angular2/src/app/lookup/view/benchmark.lookup.values.component.html
+++ b/nicnbk-ui-angular2/src/app/lookup/view/benchmark.lookup.values.component.html
@@ -23,11 +23,21 @@
 
         <div class="row">
             <div class="col-md-12">
-                <div class="col-md-1 pull-right">
+                <div class="col-md-2 pull-right">
                     <a class="btn btn-primary" id="openCurrencyModalButton" data-toggle="modal" data-target="#addNewModal" (click)="edit()" style="cursor: pointer">
                         <!--<span class="glyphicon glyphicon-edit"></span>-->Add
                     </a>
 
+                </div>
+            </div>
+        </div>
+        <br/>
+        <div class="row">
+            <div class="col-md-12">
+                <div class="col-md-2 pull-right">
+                    <a class="btn btn-primary" data-toggle="modal" data-target="#benchmarkUploadModal" style="cursor: pointer">
+                        <!--<span class="glyphicon glyphicon-edit"></span>-->Add multiple
+                    </a>
                 </div>
             </div>
         </div>
@@ -197,6 +207,46 @@
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="modal fade" id="benchmarkUploadModal" role="dialog">
+            <div class="modal-dialog" style="overflow-y: scroll; max-height:85%;  margin-top: 50px; margin-bottom:50px;">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <!--<h3 class="modal-title" >HEADER</h3>-->
+                    </div>
+                    <div class="modal-body">
+                        <div class="alert alert-danger" *ngIf="benchmarkUploadModalErrorMessage != null"><span>{{benchmarkUploadModalErrorMessage}}</span></div>
+                        <div class="alert alert-info" *ngIf="benchmarkUploadModalSuccessMessage != null"><span>{{benchmarkUploadModalSuccessMessage}}</span></div>
+                        <br/>
+                        <div>
+                            <label>Benchmark</label>
+                            <select class="form-control" style="width: 100%" [(ngModel)]="uploadBenchmarkCode" id="uploadBenchmarkCode"
+                                    [ngModelOptions]="{standalone: true}">
+                                <option *ngFor="let type of benchmarkTypes" [value]="type.code">{{type.nameEn}}</option>
+                            </select>
+                        </div>
+                        <br/>
+                        <div>Format: <span style="font-weight: bold">date [tab] index [tab] return </span></div>
+                        <div>
+                            Date format: <span style="font-weight: bold">dd.mm.yyyy</span>
+                        </div>
+                        <div>
+                            Index format: <span style="font-weight: bold">xx.xxxx</span>
+                        </div>
+                        <div>
+                            Return format: <span style="font-weight: bold">xx.xxxx</span>
+                        </div>
+                    <textarea class="form-control" placeholder="Paste values here..."
+                              name="uploadedValues" [(ngModel)]="uploadedValues"></textarea>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default pull-left" data-dismiss="modal" (click)='closeBenchmarkUploadModal()'>Close</button>
+                        <button type="button" class="btn btn-success pull-right" (click)="parseBenchmarkValues()">Save</button>
                     </div>
                 </div>
             </div>
