Benchmark: no need for index value for now

--- a/nicnbk-ui-angular2/src/app/lookup/view/benchmark.lookup.values.component.html
+++ b/nicnbk-ui-angular2/src/app/lookup/view/benchmark.lookup.values.component.html
@@ -106,7 +106,7 @@
                     <th>DATE</th>
                     <th>TYPE</th>
                     <th>RETURN</th>
-                    <th>INDEX</th>
+                    <!--<th>INDEX</th>-->
                     <!--<th>AVG VALUE</th>-->
                     <!--<th>AVG VALUE YR</th>-->
                     <th>&nbsp;</th>
@@ -117,7 +117,7 @@
                         <td>{{item.date}}</td>
                         <td>{{item?.benchmark?.nameEn}}</td>
                         <td>{{item.returnValue}}</td>
-                        <td>{{item.indexValue}}</td>
+                        <!--<td>{{item.indexValue}}</td>-->
                         <!--<td>{{item.averageValue}}</td>-->
                         <!--<td>{{item.averageValueYear}}</td>-->
                         <td>
@@ -231,13 +231,13 @@
                             </select>
                         </div>
                         <br/>
-                        <div>Format: <span style="font-weight: bold">date [tab] index [tab] return </span></div>
+                        <div>Format: <span style="font-weight: bold">date [tab] return </span></div>
                         <div>
                             Date format: <span style="font-weight: bold">dd.mm.yyyy</span>
                         </div>
-                        <div>
-                            Index format: <span style="font-weight: bold">xx.xxxx</span>
-                        </div>
+                        <!--<div>-->
+                            <!--Index format: <span style="font-weight: bold">xx.xxxx</span>-->
+                        <!--</div>-->
                         <div>
                             Return format: <span style="font-weight: bold">xx.xxxx</span>
                         </div>
