--- a/nicnbk-ui-angular2/src/app/app.component.html
+++ b/nicnbk-ui-angular2/src/app/app.component.html
@@ -296,7 +296,7 @@
                         <nav class="menu_navigation">
                         <ul class="navigation__menu" style="background-color: white">
                             <li class="navigation__item dropdown">
-                                <a class="navigation__link" style="font-family: IBM Plex Sans"
+                                <a class="navigation__link" style="font-family: IBM Plex Sans" [routerLink]="['/monitoring/portfolio']"
                                    [style.border-bottom-color]="activeMenu === 'MONITORING' ? '#D9A158' : 'white'">Monitoring</a>
                                 <ul  class="dropdown-menu">
                                     <li><a [routerLink]="['/monitoring/portfolio']" class="navigation__sublink"
@@ -319,14 +319,14 @@
                             <li *ngIf="showTrainings()" class="navigation__item dropdown"><a [routerLink]="['/bt']" class="navigation__link"
                                                                                              [style.border-bottom-color]="activeMenu === 'TRAININGS' ? '#D9A158' : 'white'" (click)="activeMenu = 'TRAININGS'">Trainings</a></li>
                             <li class="navigation__item dropdown" *ngIf="showPrivateEquity()">
-                                <a class="navigation__link" [style.border-bottom-color]="activeMenu === 'PRIVATE_EQUITY' ? '#D9A158' : 'white'">Private Equity</a>
+                                <a class="navigation__link" [routerLink]="['/pe/firmSearch']" [style.border-bottom-color]="activeMenu === 'PRIVATE_EQUITY' ? '#D9A158' : 'white'">Private Equity</a>
                                 <ul  class="dropdown-menu">
                                     <li><a [routerLink]="['/pe/firmSearch']" class="navigation__sublink" (click)="activeMenu = 'PRIVATE_EQUITY'">Firm Search</a></li>
                                     <li><a [routerLink]="['/pe/firmProfile']" class="navigation__sublink" (click)="activeMenu = 'PRIVATE_EQUITY'">New Firm</a></li>
                                 </ul>
                             </li>
                             <li class="navigation__item dropdown" *ngIf="showHedgeFunds()">
-                                <a class="navigation__link" [style.border-bottom-color]="activeMenu === 'HEDGE_FUNDS' ? '#D9A158' : 'white'">Hedge Funds</a>
+                                <a class="navigation__link" [routerLink]="['/hf/fundSearch']" [style.border-bottom-color]="activeMenu === 'HEDGE_FUNDS' ? '#D9A158' : 'white'">Hedge Funds</a>
                                 <ul  class="dropdown-menu">
                                     <li><a [routerLink]="['/hf/fundSearch']" class="navigation__sublink" (click)="activeMenu = 'HEDGE_FUNDS'">Fund Search</a></li>
                                     <li><a [routerLink]="['/hf/managerSearch']" class="navigation__sublink" (click)="activeMenu = 'HEDGE_FUNDS'">Manager Search</a></li>
@@ -337,7 +337,7 @@
                                 </ul>
                             </li>
                             <li class="navigation__item dropdown" *ngIf="showReporting()">
-                                <a class="navigation__link" [style.border-bottom-color]="activeMenu === 'REPORTING' ? '#D9A158' : 'white'">Reporting</a>
+                                <a class="navigation__link" [routerLink]="['/reporting/NBReporting']" [style.border-bottom-color]="activeMenu === 'REPORTING' ? '#D9A158' : 'white'">Reporting</a>
                                 <ul  class="dropdown-menu">
                                     <li><a [routerLink]="['/reporting/NBReporting']" class="navigation__sublink" (click)="activeMenu = 'REPORTING'">NB Reports</a></li>
                                     <li><a [routerLink]="['/reporting/NBReporting/reserveCalculation']" class="navigation__sublink" (click)="activeMenu = 'REPORTING'">Capital Calls</a></li>
